--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "@capacitor/android": "3.0.0-rc.0",
+    "@capacitor/app": "^0.3.6",
     "@capacitor/core": "3.0.0-rc.0",
+    "@capacitor/haptics": "^0.3.6",
+    "@capacitor/keyboard": "^0.5.6",
     "@ionic/react": "5.6.0",
     "@ionic/react-router": "5.6.0",
     "@testing-library/jest-dom": "^5.11.9",
